# aerial-robot

./: log.txt
src/jet/: CMakeLists.txt
src/jet/config/: dropoint.yaml  duration.yaml  flight.yaml  pid.yaml
src/jet/include/: jet.h
src/jet/launch/: cfg.launch  jet.launch  jet_manifold.launch
src/jet/src/: jet.cpp
src/uav/: CMakeLists.txt  package.xml
src/uav/action/: Charge.action  Guidance.action
src/uav/config/: dropoint.yaml  pid.yaml
src/uav/include/: cfg.h  jet.h  timer.h  uav.h
src/uav/launch/: jet.launch  uav.launch
src/uav/src/: cfg.cpp  jet.cpp  test.cpp  timer.cpp  uav.cpp
src/uav_ros/: CMakeLists.txt  package.xml
src/uav_ros/action/: Charge.action  Landing.action  Takeoff.action
src/uav_ros/config/: dropoint.yaml  pid.yaml
src/uav_ros/include/: action.h  param.h  plan.h  uav.h
src/uav_ros/src/: action.cpp  param.cpp  plan.cpp  uav.cpp
src/vision/circle/include/: circle_detector.h
src/vision/circle/src/: circle_detector.cpp
src/vision/launch/: vision.launch  vision_manifold.launch
src/vision/src/: vision_node.cpp
