<?xml version="1.0"?>
<package>
  <name>uav_action_plan</name>
  <version>1.0.0</version>
  <description>The uav_action_plan package</description>
  <maintainer email="mobangjack@foxmail.com">Jack Mo</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>dji_sdk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dji_sdk_lib</run_depend>

</package>
